# VamosEngine

./: .gitignore  CMakeLists.txt  VamosGameEngine.sln  compile_shaders.bat
VamosGameEngine/: VamosGameEngine.cpp  VamosGameEngine.vcxproj  VamosGameEngine.vcxproj.filters
VamosGameEngine/Engine/Apps/: PongApp.cpp  PongApp.h
VamosGameEngine/Engine/Apps/PongApp/: PongApp.cpp  PongApp.h
VamosGameEngine/Engine/Apps/PongApp/GameObjects/: BoxObject.cpp  BoxObject.h  SphereObject.cpp  SphereObject.h
VamosGameEngine/Engine/Apps/TestApp/: TestApp.cpp  TestApp.h
VamosGameEngine/Engine/Components/: BallComponent.cpp  BallComponent.h  BoxCollider.cpp  BoxCollider.h  ColliderComponent.cpp  ColliderComponent.h  Component.h  FollowCamera.cpp  FollowCamera.h  IComponent.h  Model.cpp  Model.h  ModelBuffer.h  SphereCollider.cpp  SphereCollider.h  TextureBuffer.h  Transform.cpp  Transform.h
VamosGameEngine/Engine/Core/: Engine.cpp  Engine.h  GameEngine.cpp  GameEngine.h  GameObject.cpp  GameObject.h  Object.cpp  Object.h  Scene.h  Window.cpp  Window.h
VamosGameEngine/Engine/Core/Input/: InputDevice.cpp  InputDevice.h  Key.h
VamosGameEngine/Engine/Data/Shaders/: lightShader.hlsl  simpleShader.hlsl
VamosGameEngine/Engine/Graphics/: Adapters.cpp  Adapters.h  Camera.cpp  Camera.h  ConstantBuffer.h  Graphics.cpp  Graphics.h  IndexBuffer.h  ShaderManager.cpp  ShaderManager.h  Shaders.cpp  Shaders.h  Vertex.h  VertexBuffer.h
VamosGameEngine/Engine/Physics/: PhysicsEngine.cpp  PhysicsEngine.h  PhysicsLayers.h
VamosGameEngine/Engine/Rendering/: Camera.cpp  Camera.h  GameObject.cpp  GameObject.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Texture.cpp  Texture.h
VamosGameEngine/Engine/Utilities/: ConcurrentQueue.h  ErrorLogger.cpp  ErrorLogger.h  ImGuiHelper.cpp  ImGuiHelper.h  JsonUtil.h  Singleton.h  StringHelper.cpp  StringHelper.h  Timer.cpp  Timer.h
VamosGameEngine/Engine/Utilities/Delegate/: Delegate.cpp  Delegate.h
VamosGameEngine/x64/Debug/: VamosGameEngine.exe.recipe  vc143.idb
VamosGameEngine/x64/Debug/VamosGameEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  VamosGameEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
